# psychology-of-speech

./: .env.example  .gitignore  README.md  prompt.docx  pyproject.toml  requirements.txt
data/cases/: attachment_cases.json  crisis_cases.json  cross_cultural_cases.json  customer_service_cases.json  dating_app_cases.json  dating_cases.json  deception_cases.json  education_cases.json  emotional_cases.json  fallacy_cases.json  family_cases.json  financial_cases.json  food_cases.json  health_cases.json  legal_cases.json  manipulation_cases.json  media_cases.json  music_cases.json  negotiation_cases.json  online_cases.json  parenting_cases.json  persuasion_cases.json  pet_cases.json  political_cases.json  psychology_cases.json  rhetoric_cases.json  romantic_breakup_cases.json  romantic_chase_cases.json  romantic_conflict_cases.json  scraped_attachment_cases.json  scraped_dating_cases.json  scraped_romantic_cases.json  scraped_romantic_conflict_cases.json  social_cases.json  speech_act_cases.json  sports_cases.json  technology_cases.json  therapy_cases.json  travel_cases.json  weather_cases.json  (+1 more)
data/golden/: text_analysis_benchmark.json
data/graph/: psychology_graph.json
data/literature/: theories.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
src/: config.py  main.py
tests/: test_agents.py  test_api.py  test_config.py  test_evaluation.py  test_guardrails.py  test_integration.py  test_knowledge.py  test_llm.py  test_logic_analyst.py  test_nlp.py  test_psychology_analyst.py  test_report_generator.py  test_scraper.py  test_text_analyst.py
(+57 files in other folders)
