[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "psychology-of-speech"
version = "0.1.0"
description = "语言心理学话语分析多智能体系统"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "hanlp>=2.1.0",
    "jieba>=0.42.1",
    "transformers>=4.45.0",
    "chromadb>=0.5.0",
    "networkx>=3.4.0",
    "sentence-transformers>=3.2.0",
    "python-docx>=1.1.0",
    "pypdf>=3.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.5.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
